fix change picture rating on rotate device